# IFL

./: LICENSE  README.md  pyproject.toml
IFL/: config.yaml  fil.py  fli.py  ifl.py  main.py  test.py  utils.py
IFL/provider/: aliyun.py  base.py  bigmodel.py  modules_factory.py  siflow.py
test/: test_llm_chat.py  test_search_replace.py
