[project]
name = "IFL"
version = "0.1.0"
description = "IFL(I'am feeling luck!), 轻量、半自动命令行编码智能体"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0.2",
    "setuptools>=80.9.0",
]

[project.scripts]
ifl = "IFL.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
